# bevy-pvz

./: CLAUDE.md  Cargo.toml  README.md
assets/fonts/: README.md
assets/levels/: README.md  gen_level.py  level_01.ron  level_row_three_physics_line.ron
docs/: hardcoding-refactor-plan.md  火豌豆.md  豌豆路径效果.md
src/: main.rs
src/game/: assets.rs  catalog.rs  combat.rs  config.rs  controls.rs  defense.rs  lawn.rs  level.rs  mod.rs  model.rs  pause.rs  physics.rs  plant.rs  projectile.rs  schedule.rs  state.rs  theme.rs  ui.rs  zombie.rs
src/game/level/: tests.rs
src/game/model/: mod.rs  plant.rs  zombie.rs
src/game/model/zombie/: armored.rs  boss.rs  mobility.rs  plant_like.rs  vehicles.rs
src/game/projectile/: tests.rs
src/game/ui/: fps.rs  results.rs
