[package]
name = "bevy-pvz"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "default_app",
    "bevy_winit",
    "2d_bevy_render",
    "ui_bevy_render",
    "default_font",
    "multi_threaded",
    "std",
    "dynamic_linking",
] }
bevy_rapier2d = { version = "0.34.0", default-features = false, features = ["dim2", "debug-render-2d"] }
ron = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["debug_tools"]
debug_tools = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
